--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutMad</title>
     <link rel="stylesheet" href="/Web 2/style.css">
-    <link rel="icon" type="image/x-icon" href="Pic/favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="/Web 2/Pic/favicon.jpg">
 </head>
 <body class="scrollable">
     <Nav>
@@ -13,7 +13,7 @@
             <div class="logo"><a href="#">_About Mad</a></div>
             <div class="menu">
                 <ul>
-                    <li><a href="#"><img src="Pic/up-arrow.png" alt=""></li></a>
+                    <li><a href="#"><img src="Web 2/Pic/up-arrow.png" alt=""></li></a>
                 </ul>
             </div>
          </div>
@@ -26,12 +26,12 @@
                 <p>Yogyakarta-Based.</p>
             </div>
             <div class="img">
-                <img src="Pic/Basket.jpg" alt="">
-                <img src="Pic/Engginer.jpg" alt="">
+                <img src="Web 2/Pic/Basket.jpg" alt="">
+                <img src="Web 2/Pic/Engginer.jpg" alt="">
             </div>
             <div class="container" id="Thanks">
                 <p>Thank you for visiting my portofolio!</p>
-                <p>I hope my work inspires you and gives you a glimpse into my passions. Each project is a step in my creative journey, and I’m excited to explore more opportunities ahead. If you’re interested in collaborating or have any questions, feel free to reach out. Let’s create something amazing together!See you in the next project!</p>
+                <p>I hope my work inspires you and gives you a glimpse into my passions. Each project is a step in my creative journey, and I’m excited to explore more opportunities ahead. If you’re interested in collaborating or have any questions, feel free to reach out. Let’s create something amazing together! See you in the next project!</p>
             </div>
             <div class="container" id="MySosmed">
                 <p>My Sosmed</p>
@@ -40,9 +40,9 @@
         </section>
         <section class="R">
             <div class="img">
-                <img src="Pic/view-car-running-high-speed.jpg" alt="">
-                <img src="Pic/Reading book.jpg" alt="">
-                <img src="Pic/stock-trading-workplace-background.jpg" alt="">
+                <img src="Web 2/Pic/view-car-running-high-speed.jpg" alt="">
+                <img src="Web 2/Pic/Reading book.jpg" alt="">
+                <img src="Web 2/Pic/stock-trading-workplace-background.jpg" alt="">
             </div>
         </section>
     </div>
