--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutMad</title>
     <link rel="stylesheet" href="/Web 2/style.css">
-    <link rel="icon" type="image/x-icon" href="Web 2/style.css">
+    <link rel="icon" type="image/x-icon" href="/Web 2/Pic/favicon.jpg">
 </head>
 <body class="scrollable">
     <Nav>
