--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="container" id="MySosmed">
                 <p>My Sosmed</p>
-                <a href="https://www.instagram.com/madlaidd/" target="_blank"><img src="https://waifu2x.booru.pics/outfiles/3ab1734c19f60dffa94550cbfee52d5dcf783d77_s2_n3_y1.png" alt=""></a>
+                <a href="https://www.instagram.com/madlaidd/" target="_blank"><img src="/Web 2/Instagram Logo.png" alt=""></a>
             </div>
         </section>
         <section class="R">
